--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,13 @@
+@font-face {
+  font-family: mahabis-icons;
+  src: url("//cdn.shopify.com/s/files/1/0238/5795/t/101/assets/mahabis-icons.eot?432620?#iefix") format("embedded-opentype"), url("//cdn.shopify.com/s/files/1/0238/5795/t/101/assets/mahabis-icons.woff?432620") format("woff"), url("//cdn.shopify.com/s/files/1/0238/5795/t/101/assets/mahabis-icons.ttf?432620") format("truetype"), url("//cdn.shopify.com/s/files/1/0238/5795/t/101/assets/mahabis-icons.svg?432620") format("svg");
+  font-style: normal;
+  font-weight: 400;
+}
+
 body {
   margin: 0;
+  background-color: #333;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +18,7 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+body * {
+  box-sizing: border-box;
 }
