--- a/src/layouts/BasicLayout/Header/Header.module.css
+++ b/src/layouts/BasicLayout/Header/Header.module.css
@@ -4,6 +4,8 @@
     width: 100%;
     z-index: 5000;
     position: fixed;
+    top: 0;
+    left: 0;
 }
 .NavRight, .NavLeft {
     list-style-type: none;
