fix: fixed the background color on header bav ul

--- a/src/layouts/BasicLayout/Header/Header.module.css
+++ b/src/layouts/BasicLayout/Header/Header.module.css
@@ -9,6 +9,7 @@
 }
 .NavRight, .NavLeft {
     list-style-type: none;
+    background-color: #fff;
     display: inline-block;
     width: 50%;
     margin: 0;
