--- a/src/layouts/BasicLayout/Header/NavDropdownMenu/NavDropdownMenu.module.css
+++ b/src/layouts/BasicLayout/Header/NavDropdownMenu/NavDropdownMenu.module.css
@@ -2,7 +2,6 @@
     position: fixed;
     top: 70px;
     left: 0;
-    height: 300px;
     width: 100%;
     background-color: #f5f5f5;
     box-shadow: 0 2px 2px rgba(0,0,0,.05);
@@ -22,4 +21,9 @@
 }
 .DropdownNav-exit {
     opacity: 1;
+}
+
+.Container {
+    max-width: 850px;
+    margin: 0 auto;
 }
