--- a/src/layouts/BasicLayout/Header/SideNavMenu/SideNavMenuContainer/SideNavMenuContainer.module.css
+++ b/src/layouts/BasicLayout/Header/SideNavMenu/SideNavMenuContainer/SideNavMenuContainer.module.css
@@ -5,8 +5,12 @@
     position: absolute;
     top: 70px;
     left: 0;
-    background-color: #f4f4f4;
+    background-color: white;
+    border-top: 1px solid #f5f5f5;
     z-index: -2;
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
 }
 
 /*media query to hide it in big screens*/
