--- a/src/layouts/BasicLayout/Header/Header.module.css
+++ b/src/layouts/BasicLayout/Header/Header.module.css
@@ -1,7 +1,7 @@
 /*Main Header container styling*/
 .MainNavHeader {
     background-color: #fff;
-    height: 70px;
+    height: 60px;
     width: 100%;
     z-index: 5000;
     position: fixed;
@@ -17,12 +17,24 @@
     text-align: center;
     text-decoration: none;
     color: #111;
-    font-size: 19px;
+    font-size: 16px;
     font-weight: 600;
 }
 .Logo {
     display: block;
     margin: auto;
-    width: 30px;
+    width: 25px;
     margin-bottom: -5px;
+}
+
+@media (min-width: 810px) {
+    .MainNavHeader{
+        height: 70px;
+    }
+    .Logo {
+        width: 30px;
+    }
+    .LogoLink {
+        font-size: 19px;
+    }
 }
