--- a/src/layouts/BasicLayout/Header/SideNavMenu/SideNavMenu.module.css
+++ b/src/layouts/BasicLayout/Header/SideNavMenu/SideNavMenu.module.css
@@ -1,6 +1,6 @@
 .Container {
     width: 100%;
-    height: 100%;
+    height: 60px;
     background-color: white;
     position: relative;
     z-index: -1;
