--- a/src/layouts/BasicLayout/Header/SideNavMenu/SideNavMenuItems/SideNavMenuItem/SideNavMenuItem.module.css
+++ b/src/layouts/BasicLayout/Header/SideNavMenu/SideNavMenuItems/SideNavMenuItem/SideNavMenuItem.module.css
@@ -9,7 +9,7 @@
     text-transform: lowercase;
     padding: 0 20px;
     position: relative;
-    transition: all 0.35s ease-in-out 0.15s;
+    transition: all 0.35s ease-in-out;
 }
 
 @media (min-width: 810px) {
