--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
   font-weight: 400;
 }
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&display=swap');
+@import url('//db.onlinewebfonts.com/c/6601fbe65008cbf2efe6b69f04759256?family=GT+Haptik+Bold');
 /*****************************************************************************************************/
 body {
   margin: 0;
