refactor: render Gallery & Press items undraggable and unselectable

--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,8 @@ code {
 body * {
   box-sizing: border-box;
 }
+img {
+  user-select: none;
+  -webkit-user-drag: none;
+  -moz-window-dragging: none;
+}
