--- a/src/layouts/BasicLayout/InstagramPhotos/InstagramPhotos.module.css
+++ b/src/layouts/BasicLayout/InstagramPhotos/InstagramPhotos.module.css
@@ -1,6 +1,6 @@
 .InstaContainer {
     position: relative;
-    margin: 50px 0;
+    margin: 50px 0 30px 0;
     padding: 0;
     list-style-type: none;
     display: grid;
