--- a/src/layouts/BasicLayout/Footer/FooterNavItems/FooterNavItems.module.css
+++ b/src/layouts/BasicLayout/Footer/FooterNavItems/FooterNavItems.module.css
@@ -1,9 +1,13 @@
-.FooterNavItemsContainer {
+/*global*/
+.FooterNavItemsContainer, .SocialNavItemsContainer {
     list-style-type: none;
     padding: 0;
     margin: 0;
     display: flex;
     justify-content: center;
+}
+/*Nav navitems*/
+.FooterNavItemsContainer {
     border-top: 1px solid #eee;
     border-bottom: 1px solid #eee;
 }
@@ -37,4 +41,32 @@
         line-height: 36px;
         text-align: center;
     }
+}
+/*Social navitems*/
+.Social::before {
+    font-family: mahabis-icons;
+    text-transform: none;
+    line-height: 1;
+    margin: 0 2px;
+}
+.Social:link,
+.Social:visited {
+    color: #333;
+    text-decoration: none;
+    transition: all 0.3s ease;
+}
+.Social:hover {
+    opacity: 0.5;
+}
+.Twitter::before {
+    content: "\74";
+}
+.Facebook::before {
+    content: "\66";
+}
+.Pinterest::before {
+    content: "\70";
+}
+.Instagram::before {
+    content: "\ea92";
 }
