refactor: use galleryData from redux store instead of the dummy data

--- a/src/layouts/BasicLayout/Gallery/GalleryItem/GalleryItem.module.css
+++ b/src/layouts/BasicLayout/Gallery/GalleryItem/GalleryItem.module.css
@@ -35,3 +35,10 @@
     bottom: 20px;
     margin: 0;
 }
+.Loading {
+    min-height: 250px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #f4f4f4;
+}
