--- a/src/layouts/BasicLayout/Header/HeaderNavItems/HeaderNavItem/HeaderNavItem.module.css
+++ b/src/layouts/BasicLayout/Header/HeaderNavItems/HeaderNavItem/HeaderNavItem.module.css
@@ -29,6 +29,7 @@
     vertical-align: middle;
     margin-left: 10px;
     transition: all .2s ease;
+    line-height: 0;
 }
 .closed:hover::after {
     font-weight: 400;
