fix: remove HomePrimaryBtn nested anchor default styling

--- a/src/components/HomePrimaryBtn/HomePrimaryBtn.module.css
+++ b/src/components/HomePrimaryBtn/HomePrimaryBtn.module.css
@@ -11,3 +11,9 @@
     border-radius: 2px;
     cursor: pointer;
 }
+.HomePrimaryBtn a:link,
+.HomePrimaryBtn a:visited {
+    display: block;
+    color: #fafafa;
+    text-decoration: none;
+}
