--- a/src/components/hoc/FadeSwitchTransition/FadeSwitchTransition.module.css
+++ b/src/components/hoc/FadeSwitchTransition/FadeSwitchTransition.module.css
@@ -13,5 +13,9 @@
  }
  .fade-enter-active,
  .fade-exit-active{
-    transition: opacity 500ms;
+    transition: all 500ms ease;
+ }
+ .fade-enter-active-fast,
+ .fade-exit-active-fast{
+    transition: all 300ms ease;
  }
