--- a/src/pages/Home/SlippersSwiper/SlipperImageSwiper/SlipperImageSwiper.module.css
+++ b/src/pages/Home/SlippersSwiper/SlipperImageSwiper/SlipperImageSwiper.module.css
@@ -5,6 +5,7 @@
 }
 .SlipperBigImageSlideContainer {
     position: relative;
+    height: 380px;
 }
 .SlipperBigImage {
     display: block;
@@ -13,6 +14,12 @@
     top: -40px;
     right: 5%;
     pointer-events: none;
+}
+.Loading {
+    top: 50% !important;
+    left: 50% !important;
+    right: auto !important;
+    transform: translate(-50%, -50%);
 }
 @media(max-width:1024px) {
     .SlipperBigImage{
