feat: add LEARN MORE button to SlipperFigureDismantle

--- a/src/pages/Home/SlipperFigureDismantle/SlipperFigureDismantle.module.css
+++ b/src/pages/Home/SlipperFigureDismantle/SlipperFigureDismantle.module.css
@@ -1,3 +1,7 @@
+.FigureDismantleBtn {
+    display: block;
+    margin: -100px auto 60px;
+}
 /*Text block above figures styling*/
 .FigureDismantleTextContainer {
     margin: 0 auto;
