refactor: create a func that accepts value and returns the jsx needed
created a function getSectionJsx that takes in value and extraData and
returns jsx, then used this function to render data conditionally in the
getRenderData function depending on different conditions.
In order to do that I added a dummy state to be replaced with redux store
later on

--- a/src/pages/Slippers/FliterProducts/FilterSection/FilterSection.module.css
+++ b/src/pages/Slippers/FliterProducts/FilterSection/FilterSection.module.css
@@ -40,6 +40,12 @@
     content: "\6d";
     border-color: #676767;
 }
+.ChooseAbove {
+    cursor: default;
+}
+.ChooseAbove::before {
+    visibility: hidden;
+}
 /*Hiding the default checkbox and replacing it with the custom checkbox above*/
 .DefaultCheckBox {
     position:absolute; 
