--- a/src/pages/Slippers/Products/ProductsList/ProductsList.module.css
+++ b/src/pages/Slippers/Products/ProductsList/ProductsList.module.css
@@ -66,3 +66,44 @@
 .OutOfStock a:focus {
     text-decoration: underline;
 }
+
+/*LOADING STYLING*/
+.Loading {
+    text-align: center;
+}
+.Loading *{
+    display: block;
+    margin: 0 auto 5px;
+    border-radius: 5px;
+    animation-duration: 2s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: infinite;
+    animation-name: placeHolderShimmer;
+    animation-timing-function: linear;
+    background: #bebebe;
+    background: linear-gradient(to right, #f5f4f4 8%, #f0f0f0 38%, #f5f5f5 54%);
+    background-size: 100vw 640px;
+    position: relative;
+}
+@keyframes placeHolderShimmer{
+    0%{
+        background-position: -50vw 0
+    }
+    100%{
+        background-position: 50vw 0
+    }
+}
+.Loading div {
+    width: 100%;
+    padding: 50% 0;
+    margin-bottom: 20px;
+}
+.Loading h3{
+    width:70%
+}
+.Loading p {
+    width: 90%;
+}
+.Loading span {
+    width: 40%;
+}
