--- a/src/pages/Slippers/Products/ProductArticle/ProductArticle.module.css
+++ b/src/pages/Slippers/Products/ProductArticle/ProductArticle.module.css
@@ -5,6 +5,38 @@
     color: #7b7b7b;
     text-align: center;
 }
+
 .SlipperArticle img {
     max-width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
+.Loading *, .ImageContainer{
+    display: block;
+    margin: 0 auto 5px;
+    border-radius: 5px;
+    animation-duration: 2s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: infinite;
+    animation-name: placeHolderShimmer;
+    animation-timing-function: linear;
+    background: #bebebe;
+    background: linear-gradient(to right, #f5f4f4 8%, #f0f0f0 38%, #f5f5f5 54%);
+    background-size: 100vw 640px;
+    position: relative;
+}
+.ImageContainer {
+    width: 100%;
+    padding: 15% 0 ;
+    margin: 0;   
+}
+@keyframes placeHolderShimmer{
+    0%{
+        background-position: -50vw 0
+    }
+    100%{
+        background-position: 50vw 0
+    }
+}
+
