feat: add css media queries for small screens in /slippers pages

--- a/src/pages/Slippers/Products/FiltersSelected/FiltersSelected.module.css
+++ b/src/pages/Slippers/Products/FiltersSelected/FiltersSelected.module.css
@@ -5,6 +5,11 @@
     display: flex;
     flex-wrap: wrap;
 }
+@media (max-width: 600px) {
+    .SelectedFiltersList {
+        display: none;
+    }
+}
 .SelectedFilter {
     margin: 5px 10px 0;
 }
