--- a/src/pages/Slippers/Products/ProductArticle/ProductArticle.module.css
+++ b/src/pages/Slippers/Products/ProductArticle/ProductArticle.module.css
@@ -4,6 +4,13 @@
     line-height: 20px;
     color: #7b7b7b;
     text-align: center;
+    padding-bottom: 15px;
+    border-bottom: 1px solid #f5f5f5;
+}
+@media (max-width: 600px) {
+    .SlipperArticle p {
+        font-size: 11px
+    }
 }
 
 .SlipperArticle img {
