--- a/src/pages/Slippers/Products/MobileFiltersButton/MobileFiltersButton.module.css
+++ b/src/pages/Slippers/Products/MobileFiltersButton/MobileFiltersButton.module.css
@@ -1,20 +1,20 @@
 .FiltersButton {
+    width: max-content;
     margin: 0 15px;
     padding: 10px 0;
-    text-align: right;
+    font-family: inherit;
     font-size: 14px;
     font-weight: 500;
     line-height: 25px;
     color: #222;
-}
-.FiltersButton div {
+    background-color: white;
+    border: none;
     margin-left: auto;
-    width: max-content;
     cursor: pointer;
     display: flex;
     align-items: center;
 }
-.FiltersButton div div {
+.FiltersButton div {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -25,9 +25,6 @@
     border-radius: 50%;
     height: 20px;
     width: 20px;
-}
-.FiltersButton div div span {
-    line-height: 1;
 }
 @media (min-width: 600px) {
     .FiltersButton {
