--- a/src/layouts/BasicLayout/Header/SideNavMenu/SideNavMenuContainer/SideNavMenuContainer.module.css
+++ b/src/layouts/BasicLayout/Header/SideNavMenu/SideNavMenuContainer/SideNavMenuContainer.module.css
@@ -11,13 +11,8 @@
     margin: 0;
     padding: 0;
     list-style-type: none;
-    overflow: scroll;
-    scrollbar-width: none;
+    overflow: auto;
 }
-.SideMenuContainer::-webkit-scrollbar {
-    width: 0;
-  }
-
 /*media query to hide it in big screens*/
 @media (min-width: 1025px) {
     .SideMenuContainer {
