--- a/src/pages/Slippers/Slippers.module.css
+++ b/src/pages/Slippers/Slippers.module.css
@@ -13,24 +13,24 @@
     max-width: 1100px;
     margin: 0 auto;
 }
-.SlippersPageWrapper aside, .SlippersPageWrapper section {
+.Filter, .Products {
     display: inline-block;
 }
-.SlippersPageWrapper aside {
+.Filter {
     margin: 1%;
     width: 20%;
     vertical-align: top;
 }
-.SlippersPageWrapper section {
+.Products {
     width: 75%;
     margin-left: 2%;
 }
 
 @media(max-width: 600px) {
-    .SlippersPageWrapper aside {
+    .Filter {
         display: none;
     }
-    .SlippersPageWrapper section {
+    .Products {
         width:auto;
         margin: 0 10px;
     }
