feat: make FilterProducts accept isInSidebar as props
Made the FilterProducts accept a boolean that tells it if that component
will render inside of a sidebar or not and acoordingly add a className
with some styling fixes for rendering in a sidebar and also run the
disable scrolling when sidebar is open function with useEffect hook.

--- a/src/pages/Slippers/FliterProducts/FliterProducts.module.css
+++ b/src/pages/Slippers/FliterProducts/FliterProducts.module.css
@@ -13,3 +13,21 @@
     border-bottom: 1px solid #f5f5f5;
     text-transform: lowercase;
 }
+
+/*Styling for when it renders in a sidebar*/
+.InSideBar {
+    border: none;
+    padding: 0;
+}
+.InSideBar h2 {
+    padding: 20px 25px;
+    font-size: 100%
+}
+.InSideBar .FiltersWrapper {
+    max-height: 90vh;
+    overflow: auto;
+    padding: 0 25px;
+}
+.InSideBar * {
+    font-size: 95%;
+}
