--- a/src/layouts/BasicLayout/Header/Header.module.css
+++ b/src/layouts/BasicLayout/Header/Header.module.css
@@ -7,6 +7,7 @@
     position: fixed;
     top: 0;
     left: 0;
+    box-shadow: 0px 2px 14px -8px rgb(185, 185, 185);
 }
 /*Logo styling*/
 .LogoLink {
