--- a/src/pages/Slippers/Slippers.module.css
+++ b/src/pages/Slippers/Slippers.module.css
@@ -31,7 +31,8 @@
         display: none;
     }
     .Products {
-        width:auto;
-        margin: 0 10px;
+        width: 100%;
+        margin: 0;
+        padding: 0 10px;
     }
 }
