feat: add buttons to clear and apply filters in FilterSidebar
The animation of the buttons sliding up is actually done by making them
static positioned and decreasing the height of the filters container
element.
the FliterProducts component now has a useEffect with a timeout to know
when the animation transition of the sidebar is done and update the state
of it accordingly and use this state to decrease the height of the above
element when the time is right.

--- a/src/pages/Slippers/FliterProducts/FliterProducts.module.css
+++ b/src/pages/Slippers/FliterProducts/FliterProducts.module.css
@@ -26,8 +26,13 @@
 .InSideBar .FiltersWrapper {
     max-height: 90vh;
     overflow: auto;
-    padding: 0 25px;
+    padding: 0 25px 15px;
+    transition: all 500ms ease;
 }
 .InSideBar * {
     font-size: 95%;
+}
+/*decreasing height when the animation of the sidebar is done*/
+.AnimationDone .FiltersWrapper{
+    max-height: 77vh;
 }
