--- a/src/pages/Slippers/FilterSidebar/FilterSidebar.module.css
+++ b/src/pages/Slippers/FilterSidebar/FilterSidebar.module.css
@@ -39,3 +39,14 @@
     right: 15px;
     font-size: 16px;
 }
+
+.FilterButtonsContainer {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 80px;
+    box-shadow: 0 -8px 15px -12px #b9b9b9;
+}
+.WideBtn {
+    width: 42%;
+}
