refactor: change HomePrimaryBtn component name to just Button
Did this to be more declarative because now it has an outlined variant
and that would be unreasonable to call primary.

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,4 +1,4 @@
-.PrimaryButtonOutlined, .HomePrimaryBtn {
+.ButtonOutlined, .ButtonPrimary {
     font-size: 11px;
     text-transform: uppercase;
     letter-spacing: 0.2em;
@@ -9,11 +9,11 @@
     border-radius: 2px;
     cursor: pointer;
 }
-.HomePrimaryBtn {
+.ButtonPrimary {
     color: #fafafa;
     background-color: black;
 }
-.PrimaryButtonOutlined {
+.ButtonOutlined {
     color: black;
     background-color: white;
     border: 1px solid black;
@@ -21,8 +21,10 @@
 .NoLink {
     padding: 0 2em;
 }
-.HomePrimaryBtn a:link,
-.HomePrimaryBtn a:visited {
+.ButtonOutlined a:link,
+.ButtonOutlined a:visited,
+.ButtonPrimary a:link,
+.ButtonPrimary a:visited {
     padding: 0 2em;
     display: block;
     color: #fafafa;
