--- a/src/pages/Slippers/FliterProducts/FliterProducts.module.css
+++ b/src/pages/Slippers/FliterProducts/FliterProducts.module.css
@@ -33,6 +33,6 @@
     font-size: 95%;
 }
 /*decreasing height when the animation of the sidebar is done*/
-.AnimationDone .FiltersWrapper{
+.AnimationDone.InSideBar .FiltersWrapper{
     max-height: 77vh;
 }
