refactor: seperate the active product big image into its own component

--- a/src/pages/Slipper/ProductShowcase/ProductImages/ProductImages.module.css
+++ b/src/pages/Slipper/ProductShowcase/ProductImages/ProductImages.module.css
@@ -7,17 +7,6 @@
         padding-left: 60px;
     }
 }
-.Wrapper, .ImageContainer {
+.Wrapper{
     width: 66.67%;
-}
-.ProductBigImage {
-    max-width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-.ImageContainer {
-    position: relative;
-    padding: 35% 15px;
-    margin: 0 auto;
 }
