--- a/src/pages/Slippers/FliterProducts/FilterSection/FilterSection.module.css
+++ b/src/pages/Slippers/FliterProducts/FilterSection/FilterSection.module.css
@@ -59,34 +59,17 @@
     padding:0;
     border:0;
 }
-h3.Loading {
+h3.PerserveWidthWhileLoading {
     width: 50%;
     padding-top: 5px;
 }
-.Loading {
+.PerserveWidthWhileLoading {
     display:block;
     border-radius: 5px;
     margin-bottom: 5px;
     cursor: default;
     width: 90%;
-    animation-duration: 2s;
-    animation-fill-mode: forwards;
-    animation-iteration-count: infinite;
-    animation-name: placeHolderShimmer;
-    animation-timing-function: linear;
-    background: #bebebe;
-    background: linear-gradient(to right, #f5f4f4 8%, #f0f0f0 38%, #f5f5f5 54%);
-    background-size: 100vw 640px;
-    position: relative;
-}
-@keyframes placeHolderShimmer{
-    0%{
-        background-position: -50vw 0
-    }
-    100%{
-        background-position: 50vw 0
-    }
 }    
-.Loading::before{
+.PerserveWidthWhileLoading::before{
     visibility: hidden;
 }
