--- a/src/pages/Slippers/Products/ProductArticle/ProductArticle.module.css
+++ b/src/pages/Slippers/Products/ProductArticle/ProductArticle.module.css
@@ -19,19 +19,10 @@
     top: 0;
     left: 0;
 }
-.Loading *, .ImageContainer{
+.PerserveWidthWhileLoading *, .ImageContainer{
     display: block;
     margin: 0 auto 5px;
     border-radius: 5px;
-    animation-duration: 2s;
-    animation-fill-mode: forwards;
-    animation-iteration-count: infinite;
-    animation-name: placeHolderShimmer;
-    animation-timing-function: linear;
-    background: #bebebe;
-    background: linear-gradient(to right, #f5f4f4 8%, #f0f0f0 38%, #f5f5f5 54%);
-    background-size: 100vw 640px;
-    position: relative;
 }
 .ImageContainer {
     width: 100%;
