fix: opacity stays the same if radio button is checked in upper color

--- a/src/pages/Slipper/ProductShowcase/ProductDetails/UpperColor/UpperColor.module.css
+++ b/src/pages/Slipper/ProductShowcase/ProductDetails/UpperColor/UpperColor.module.css
@@ -2,6 +2,9 @@
     border: solid 1px #ddd;
     border-radius: 2px;
 }
+.RadioButton:checked + .ProductLabel img {
+    opacity: 1;
+}
 .ProductLabel{
     width: 25%;
 }
